deliverables covered, swagger config still needs fixes

--- a/retirementCalculator/src/main/resources/application.yaml
+++ b/retirementCalculator/src/main/resources/application.yaml
@@ -7,6 +7,17 @@ spring:
   profiles:
     active: dev
 
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+    operationsSorter: method
+    tagsSorter: alpha
+    tryItOutEnabled: true
+    groups:
+      enabled: true
+
 datasource:
 initialization-mode: always
 continue-on-error: true
