--- a/retirementCalculator/src/main/resources/application-dev.yaml
+++ b/retirementCalculator/src/main/resources/application-dev.yaml
@@ -1,3 +1,4 @@
+
 # src/main/resources/application-dev.yaml
 
 # --- Development Profile Configuration ---
@@ -17,21 +18,30 @@ spring:
     properties:
       hibernate:
         default_schema: retirement_staging
-      database-platform: org.hibernate.dialect.PostgreSQLDialect
-      show-sql: true
+        format_sql: true
 
   redis:
-    image: redis:latest
-    container_name: my-redis
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis-data:/data
-    restart: unless-stopped
+    host: localhost
+    port: 6379
+
+# springdoc/swagger configuration
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+    operationsSorter: method
+    tagsSorter: alpha
+    tryItOutEnabled: true
+  groups:
+    enabled: true
+  paths-to-match: /retirement-plans/**
 
 logging:
   level:
-    org.springframework.web: DEBUG # Example: Set web logging to DEBUG in dev
-    org.hibernate.SQL: DEBUG  # Added to help with SQL logging
-    org.hibernate.type.descriptor.sql: TRACE  # Shows parameter binding
-    # Add other package specific logging levels here
+    org.springframework.web: DEBUG
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql: TRACE
+    org.springdoc: DEBUG
+    org.springframework.boot.web.servlet.error: DEBUG
+    org.hibernate: ERROR
