--- a/retirementCalculator/src/main/resources/application-dev.yaml
+++ b/retirementCalculator/src/main/resources/application-dev.yaml
@@ -28,6 +28,7 @@ spring:
 springdoc:
   api-docs:
     path: /v3/api-docs
+    version: OPENAPI_3_0
   swagger-ui:
     path: /swagger-ui.html
     operationsSorter: method
